Total Folder Restructure

--- a/views/event/admin/manage_events.html
+++ b/views/event/admin/manage_events.html
@@ -141,8 +141,8 @@
                 <div class="modal-header">
                     <h4 class="modal-title" id="myModalLabel">Update Event</h4>
                 </div>
-                <div class="modal-body" id="updateEvents">
-
+                <div class="modal-body">
+                    <form id="updateEvents"></form>
 
                 </div>
                 <div class="modal-footer">
