--- a/views/login.html
+++ b/views/login.html
@@ -68,7 +68,7 @@
         </div>
     </header>
     <!-- #header -->
-
+    <!--Dummy header-->
     <!--==========================
     Login and Registration Section
   ============================-->
