--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -98,7 +98,7 @@ Hotels Section
             <div class="hotel-img" data-toggle="modal" data-target="#kerala">
               <img src="../assets/images/hotels/1.jpg" alt="Hotel 1" class="img-fluid">
             </div>
-            <h3><a href="#" data-toggle="modal" data-target="#kerala">Hotel 1</a></h3>
+            <h3><a href="#" data-toggle="modal" data-target="#kerala">Kerala Floods</a></h3>
             <!-- <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -112,10 +112,10 @@ Hotels Section
 
         <div class="col-lg-4 col-md-6">
           <div class="hotel">
-            <div class="hotel-img" data-toggle="modal" data-target="#exampleModalLong">
+            <div class="hotel-img" data-toggle="modal" data-target="#aasra">
               <img src="../assets/images/hotels/2.jpg" alt="Hotel 2" class="img-fluid">
             </div>
-            <h3><a href="#" data-toggle="modal" data-target="#exampleModalLong">Hotel 2</a></h3>
+            <h3><a href="#" data-toggle="modal" data-target="#aasra">Aasra Diya Project</a></h3>
             <!-- <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -129,10 +129,10 @@ Hotels Section
 
         <div class="col-lg-4 col-md-6">
           <div class="hotel">
-            <div class="hotel-img" data-toggle="modal" data-target="#exampleModalLong">
+            <div class="hotel-img" data-toggle="modal" data-target="#organ">
               <img src="../assets/images/hotels/3.jpg" alt="Hotel 3" class="img-fluid">
             </div>
-            <h3><a href="#" data-toggle="modal" data-target="#exampleModalLong">Hotel 3</a></h3>
+            <h3><a href="#" data-toggle="modal" data-target="#organ">Organ Donation</a></h3>
             <!-- <div class="stars">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -148,73 +148,106 @@ Hotels Section
 
   </section>
 
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-    Launch demo modal
-  </button>
+
 
   <!-- Modal Kerala -->
   <div class="modal fade" id="kerala" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content modal-design">
+
         <div class="modal-header">
-          <h5 class="modal-title" id="modal1">Kerala Floods</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+          <div class="hotel-img">
+            <img src="../assets/images/hotels/1.jpg" alt="Hotel 1" class="img-fluid">
+          </div>
+          <button type="button" class="close modal-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
+
         <div class="modal-body">
+          <h5 class="modal-title" id="modal1"> <u>Kerala Floods</u> </h5>
           <p>Time flows by, oscillating between the good and the bad. As we live, God's own country is suffering God's wrath. The beautiful palm-lined beaches, the soul stirring network of canals and the eye-catching mountain slopes lie crying, as Kerala is hit with one of the most destructive floods of recent times. <br>
             To save God's own country from this unexpected wrath of God, we, as God's own creation, should come forward in this hour of peril and need. For saving millions, we billions must open our arms and uphold the Incredibility of India.
           </p>
         </div>
+
         <!-- <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Save changes</button>
         </div> -->
+
       </div>
+
     </div>
   </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
+  <!-- Modal Aasra -->
+  <div class="modal fade" id="aasra" tabindex="-1" role="dialog" aria-labelledby="modal2" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content modal-design">
+
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+          <div class="hotel-img">
+            <img src="../assets/images/hotels/2.jpg" alt="Hotel 1" class="img-fluid">
+          </div>
+          <button type="button" class="close modal-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
+
         <div class="modal-body">
-          ...
+          <h5 class="modal-title" id="modal2"> <u>Aasra Diya Project</u> </h5>
+          <p>Decorated with colors and love by the underprivileged children from AASRA workplaces, AASRA diyas shine like true gems in the night.
+            AASRA provides the diyas and raw material, and the delicate hands of the children make their fire shine brighter.
+            With each diya you buy, you award their creativity and help them towards a better future.
+            So, come, light a dream this Diwali and wash away the hazy shade of winter.
+          </p>
         </div>
-        <div class="modal-footer">
+
+        <!-- <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+        </div> -->
+
       </div>
+
     </div>
   </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
+  <!-- Modal Organ -->
+  <div class="modal fade" id="organ" tabindex="-1" role="dialog" aria-labelledby="modal3" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content modal-design">
+
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+          <div class="hotel-img">
+            <img src="../assets/images/hotels/3.jpg" alt="Hotel 1" class="img-fluid">
+          </div>
+          <button type="button" class="close modal-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
+
         <div class="modal-body">
-          ...
+          <h5 class="modal-title" id="modal3"> <u>Organ Donation</u> </h5>
+          <p>
+            The world's riches and beauty can be witnessed or savored to the fullest only with the help of our vital organs.
+            Unfortunately, not each and every mortal being on the face of this globe is blessed with all of them.
+            Organ donation to help the needy is like bringing light into darkness, variety into monotony and euphoria into tediousness.
+            Innovision'18 requests you to promote and take part in such activities in order to spread warm fuzzies and make the world a better place!
+          </p>
         </div>
-        <div class="modal-footer">
+
+        <!-- <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+        </div> -->
+
       </div>
+
     </div>
   </div>
 
@@ -244,7 +277,7 @@ Hotels Section
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!-- <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
@@ -253,19 +286,21 @@ Hotels Section
               <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br> New York, NY 535022<br> United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <b>Student Activity Center</b> <br>
+              <strong>National Institute of Technology</strong> <br>
+              <em>Sector 1, Rourkela - 769008</em> <br>
+              <strong>Phone:</strong> +1 5589 55488 55 <br>
+              <strong>Email:</strong> <a href="mailto:contactus@innonitr.com">contactus@innonitr.com</a> <br>
             </p>
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://twitter.com/nitrourkela?s=17" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.facebook.com/nitrkl1/" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
@@ -279,7 +314,7 @@ Hotels Section
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
+        &copy; Copyright <strong>National Institute of Technology, Rourkela</strong>.
       </div>
       <div class="credits">
         <!--
