--- a/views/login.html
+++ b/views/login.html
@@ -93,11 +93,8 @@
                 <!-- Schdule Day 1 -->
                 <div role="tabpanel" class="col-lg-7 tab-pane fade show active" id="registration" style="background-color: #0e1735;">
                     
-<<<<<<< HEAD:views/login.html
-                        <div id="error"></div>
-=======
+                  <div id="error"></div>
                     <form class="form-horizontal" action="" method="post">
->>>>>>> d297bc8c8098c19b0f5e6732a9620af760aa1323:views/login.html
                         <div class="form-group">
                             <label class="control-label col-sm-6" for="Name" style="color:white;">Name:</label>
 
@@ -217,13 +214,11 @@
 
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-12" align="center">
-<<<<<<< HEAD:views/login.html
+
                                 <!--<a href="#about" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br>-->
                                 <button id="login_button" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</button>
-=======
                                 <!-- <a href="#" class="about-btn scrollto signin">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br> -->
                                 <button id="signin" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</button>
->>>>>>> d297bc8c8098c19b0f5e6732a9620af760aa1323:views/login.html
                                 
                                 <!-- <center><button type="submit" class="btn btn-default" style="color:black">Submit</button></center> -->
 
@@ -342,11 +337,11 @@
             //window.location="./profile.html"
             $('#college_add').hide();
             $.ajax({
-                url:'../apis/CollegeList/readCollege.php',
+                url:'../apis/misc/CollegeList/readCollege.php',
                 type: 'get',
                 success:function(response)
                 {
-                    response = JSON.parse(response)
+                    response = JSON.parse(response);
                     if(response.status=="success")
                     {
                         // console.log(response.result)
@@ -375,7 +370,10 @@
                    $('#college_add').show();
                    break;
            }
+           if(selection != "other")
+                 $('#college_add').hide();
         });
+    
         $("#phone").focusout(function(){
             var phone=$("#phone").val();
             if(phone.length != 10){
@@ -385,13 +383,12 @@
                 $("#error").html("<div style=\"color:#4dff88;height:40px;padding : 10px;\"><strong><center>Valid phone number</strong></center></div>");
             }   
         });
-    
-<<<<<<< HEAD:views/login.html
-         $('#login_button').on('click', function(){
+
+        $('#login_button').on('click', function(){
             var mail=$("#login_email").val();
             var passw=$("#login_password").val();   
             $.ajax({
-                url:'../apis/participantRegistration/login.php',
+                url:'../apis/user/auth/login.php',
                 data:"email="+mail+"&password="+passw,
                 type: 'post',
                 success:function(response)
@@ -407,33 +404,8 @@
                   }               
               }
               });
-=======
-        $(document).on("click", ".signin", function () {
-         // $('#signin').on('click', function(){
-         console.log("Here")      
-        var mail=$("#login_email").val();
-        var passw=$("#login_password").val();   
-            console.log(mail);
-            console.log(passw);
-            // $.ajax({
-            //     url:'../apis/participantRegistration/login.php',
-            //     data:"email="+mail+"&password="+passw,
-            //     type: 'post',
-            //     success:function(response)
-            //     {
-            //         var response = JSON.parse(response);
-            //         console.log(response);
-            //         if(response.status == "success"){
-            //               console.log(response.result)
-            //        }
-            //       else if(response.status=="failure"){
-            //         $("#error").html('<div style="background-color:#ff6666;height:40px;padding:10px;width:50%;border-radius:10px;">'+response.result+'</div>');
-            //       }               
-            //   }
-            //   });
->>>>>>> d297bc8c8098c19b0f5e6732a9620af760aa1323:views/login.html
         });
-
+    
         $('#signup').on('click', function(){ 
             var gender =  $('input[name=gen]:checked', '#gender').val(); 
             var e = document.getElementById("college");
@@ -445,7 +417,7 @@
                 {
                     console.log(college_name_input)
                     $.ajax({
-                        url: '../apis/CollegeList/createCollege.php',
+                        url: '../apis/misc/CollegeList/others/create.php',
                         data: "cname="+college_name_input,
                         type: 'post',
                         success: function(response) {
@@ -470,10 +442,12 @@
             else
             {
                 $.ajax({
-                    url: '../apis/participantRegistration/registration.php',
+                    url: '../apis/user/auth/registration.php',
                     data:user_data,
                     type: 'post',
                     success: function(response) {
+                        
+                        console.log(response)
                         var response = JSON.parse(response);
                         if(response.status=="success")
                         {
@@ -483,18 +457,17 @@
                         }
                         else
                         {
-<<<<<<< HEAD:views/login.html
                             $("#error").html("<div style=\"color:#ff6666;height:40px;padding : 10px;\"><center><strong>"+response.message+"</center></strong></div>");
                             //console.log(response.result);
-=======
                             $("#error").html("<div style=\"color:#ff6666;height:40px;padding : 10px;\"><center><strong>"+response.result+"</center></strong></div>");
                             // console.log(response.result);
->>>>>>> d297bc8c8098c19b0f5e6732a9620af760aa1323:views/login.html
                         }
                    }
                 });
             }
         });
+     
+   
         $("#email").focusout(function(){
             var email=$("#email").val();
             var atpos = email.indexOf("@");
@@ -506,7 +479,7 @@
             }
             else{
                 $.ajax({
-                url: '../apis/participantRegistration/check_email.php',
+                url: '../apis/user/auth/check_email.php',
                 type: 'post',
                 data:link_email,
                     success: function(response) {
