checked ca user and admin

--- a/views/ca/admin/index.html
+++ b/views/ca/admin/index.html
@@ -56,7 +56,7 @@
             // console.log($("#pwd").val());
             $.ajax({
                 type: "POST",
-                url: "../../../apis/panels/cms/login.php",
+                url: "../../../apis/admin/events/admin/login.php",
                 data: {
                     username: $("#id").val().toString(),
                     password: $("#pwd").val().toString()
