Event Coordinator except winner

--- a/views/event/coordinator/admin_panel.html
+++ b/views/event/coordinator/admin_panel.html
@@ -167,7 +167,7 @@
         <div class="col-sm-2"><button type="button" class="btn btn-default logout_button" style="margin-top: 2em;">Sign
                     Out</button></div>
     </div>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="../../../assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script>
         $(document).on("click", ".logout_button", function() {
             localStorage.clear();
