--- a/views/event/coordinator/index.html
+++ b/views/event/coordinator/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     </center>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="../../../assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <!--     <script>
         $(document).on("click", ".submit", function () {
         	console.log($("#pwd").val());
