--- a/views/event/coordinator/index.html
+++ b/views/event/coordinator/index.html
@@ -79,7 +79,7 @@
     <script src="../../../assets/js/ajax/event_coordinator_login.js"></script>
     <script>
         $(document).ready(function() {
-            localStorage.clear();
+            // localStorage.clear();
         });
     </script>
 </body>
