CA auth verification

--- a/views/ca/admin/index.html
+++ b/views/ca/admin/index.html
@@ -56,13 +56,13 @@
             // console.log($("#pwd").val());
             $.ajax({
                 type: "POST",
-                url: "../../../apis/admin/events/admin/login.php",
+                url: "../../../apis/admin/ca/login.php",
                 data: {
                     username: $("#id").val().toString(),
                     password: $("#pwd").val().toString()
                 },
                 success: function(data) {
-                    // console.log(data);
+                    console.log(data);
                     var dataSet = JSON.parse(data);
                     if (dataSet["status"].localeCompare("success") == 0) {
                         localStorage.cms_token = dataSet["result"];
